feat: added new vxagent binary revision to support bundle of agent binary distribution (rpm and deb packages)
